assets/css/style.css
/* ... */
.active {
    border-bottom: 5px solid #BEEE62;
}

.nav-item a:hover {
    border-bottom: 5px solid #BEEE62;
}

.navbar-toggler {
    border: none;
}

.navbar-toggler:active {
    outline: none;
}

.navbar-toggler:not(:active) {
    outline: none;
}

.navbar-toggle-bars {
    color: #BEEE62;
    font-size: 24px;
}

/*----------------------------------------------------- Hero Image Section -----*/

.hero-image { 
    height: 90vh;
    background: url(../images/hero_img1.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    justify-content: center;
    align-items: center;
    display: flex;
}

.hero-text {
    color: #BEEE62;
    background-color: rgba(17, 60, 243, .75);
    border-radius: 25px;
    padding: 20px;
    text-align: center;
    font-family: "Architects Daughter", sans-serif;
    letter-spacing: 3px;
}

.hero-text h1 {
    font-size: 30px;
    font-weight: 700;
}

.hero-text h3 {
    font-size: 18px;
    font-weight: 700;
}

/*----------------------------------------------------- About Us Section -----*/

.about-us {
    background-color: #BEEE62;
    padding: 30px;
}

.about-us h2 {
    color: #113CF3;
    font-family: "Architects Daughter", sans-serif;
    font-size: 24px;
    font-weight: 700;
    text-align: center;
    letter-spacing: 3px;
    padding: 20px 0;
}

.about-us h3 {
    color: #113CF3;
    font-family: "Architects Daughter", sans-serif;
    font-size: 18px;
    font-weight: 700;
    text-align: center;
    letter-spacing: 3px;
    padding: 10px;
}

.about-us i {
    color: #113CF3;
    font-size: 18px;
    font-weight: 700;
    display: block;
    text-align: center;
}

.about-us p {
    color: #000;
    font-family: "Chicle", sans-serif;
    font-size: 14px;
    display: block;
    text-align: justify;
    letter-spacing: 1px;
    padding: 0 20px 20px 20px;
}

/*----------------------------------------------------- Testimonials Section -----*/

.testimonials {
    background-color: #113CF3;
    padding: 30px;
}

.testimonials h2 {
    color: #BEEE62;
    font-family: "Architects Daughter", sans-serif;
    font-size: 24px;
    font-weight: 700;
    text-align: center;
    letter-spacing: 3px;
    padding: 20px 0;
}

.testimonials img {
    border-radius: 50%;
    object-fit: cover;
    display: block;
    margin-left: auto;
    margin-right: auto;
    border: 3px solid #BEEE62;
    padding: 3px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.testimonials p {
    color: #fff;
    font-family: "Chicle", sans-serif;
    font-size: 14px;
    display: block;
    text-align: justify;
    letter-spacing: 1px;
    padding: 10px;
    margin: 0;
}

/*----------------------------------------------------- Activity Schedule Section -----*/

.activity-schedule {
    background-color: #BEEE62;
    padding: 30px 0;
}

.activity-schedule h2 {
    color: #113CF3;
    font-family: "Architects Daughter", sans-serif;
    font-size: 24px;
    font-weight: 700;
    text-align: center;
    letter-spacing: 3px;
    padding: 20px 0;
}

.activity-schedule-icon {
    color: #113CF3;
    font-size: 18px;
    font-weight: 700;
    display: block;
    text-align: center;
    padding-top: 10px;
}

.activity-schedule h3 {
    color: #113CF3;
    font-family: "Architects Daughter", sans-serif;
    font-size: 18px;
    font-weight: 700;
    text-align: center;
    letter-spacing: 3px;
    padding: 10px;
    margin: 0;
}

.activity-schedule table {
    background-color: #113CF3;
    width: 100%;
    margin-bottom: 30px;
}

.activity-schedule td, .activity-schedule th {
    color: #fff;
    text-align: center;
    font-family: "Chicle", sans-serif;
    font-size: 14px;
    letter-spacing: 1px;
    padding: 5px;
    border-top: 3px solid #BEEE62;
    border-bottom: 3px solid #BEEE62;
}

.activity-schedule-download {
    text-align: center;
    padding: 20px;
}

.activity-schedule button {
    background-color: #113CF3;
    font-size: 18px;
    border-radius: 25px;
    font-weight: 700;
    font-family: "Chicle", sans-serif;
    letter-spacing: 3px;
    margin: 20px;
    border: 0;
}

.activity-schedule button:hover {
    background-color: #113CF3;
    font-size: 18px;
    border-radius: 25px;
    font-weight: 700;
    font-family: "Chicle", sans-serif;
    letter-spacing: 3px;
    margin: 20px;
    border: 0;
}

.activity-schedule a {
    color: #fff;
    text-decoration: none;
    padding: 10px;
}

.activity-schedule a:hover {
    color: #BEEE62;
    text-decoration: none;
    padding: 10px;
}


/*----------------------------------------------------- Sign Up Section -----*/

.sign-up-image {
    height: 60vh;
    background: url(../images/sign_up_img1.jpg) no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    justify-content: center;
    align-items: center;
    display: flex;
}

.sign-up-text {
    background-color: rgba(17, 60, 243, .75);
    border-radius: 25px;
    padding: 10px;
    margin: 50px;
    text-align: center;
}

.sign-up-text h3 {
    color: #BEEE62;
    font-family: "Architects Daughter", sans-serif;
    font-size: 18px;
    font-weight: 700;
    text-align: center;
    letter-spacing: 3px;
    padding: 10px;
    margin: 0;
}

.sign-up-text button {
    background-color: #BEEE62;
    color: #000;
    font-size: 18px;
    border-radius: 25px;
    font-weight: 700;
    font-family: "Chicle", sans-serif;
    letter-spacing: 3px;
    padding: 10px;
    margin: 20px;
    border: 0;
}

.sign-up-text button:hover {
    background-color: #BEEE62;
    color: #113FC3;
    font-size: 18px;
    border-radius: 25px;
    font-weight: 700;
    font-family: "Chicle", sans-serif;
    letter-spacing: 3px;
    padding: 10px;
    margin: 20px;
    border: 0;
}
/* ... */

